--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,7 +23,16 @@ section .btn {
 .bg-goldenrod {
   background-color: #fbb617 ;
 }
-
+.padding-top-15{
+	padding-top: 15px;
+}
+.padding-bottom-15{
+	padding-bottom: 15px;
+}
+.icon{
+	font-size: 2.5rem;
+	margin-right: 1.2rem;
+}
 /** NAVBAR**/
 header a {
 	text-decoration: none;
@@ -32,13 +41,6 @@ header a {
 }
 header{
 	background-color: #fff;
-}
-nav .navbar-left img{
-	padding-top: 15px;
-}
-nav .visible-xs, nav .hidden-xs{
-	padding-top: 15px;
-	padding-bottom: 15px;
 }
 /** SECCIÓN HERO **/
 #hero {
@@ -60,8 +62,7 @@ nav .visible-xs, nav .hidden-xs{
   justify-content: center;
 }
 #hero .separador hr,
-#hero .separador span
-{
+#hero .separador span {
   width: 30%;
 }
 
@@ -110,7 +111,7 @@ nav .visible-xs, nav .hidden-xs{
   height: 400px;
   float: right;
   padding: 10px;
-  width: 400px;
+  width: 100%;
 }
 
 #costo{
@@ -167,7 +168,6 @@ footer a, footer li {
   }
 }
 
-/* XS Mobile ( 0-768px ) */
 @media (max-width: 992px) {
   h1 {
     font-size: 30px;
@@ -191,19 +191,18 @@ footer a, footer li {
     margin-top: 0;
   }
   .textConduce .subTitle{
-    font-size: 2.55rem;
+    font-size: 2.2rem;
     color: white;
   }
   .textConduce .btn{
-    width: 90%;
     color: white;
-    font-size: 1.9rem;
+    font-size: 1.8rem;
   }
   .textConduce{
-    margin: 200px 10px;
+    margin: 110px 13px;
   }
   .containerMobile{
-    padding: 50px 10px;
+    padding: 50px 16px;
     font-size: 3rem;
   }
   .containerMobile .imgMobile{
@@ -222,11 +221,8 @@ footer a, footer li {
   .containerMobile .col-xs-12 .padd-top{
     padding-top: 43px;
   }
-
 }
 
-/*SM Small devices (tablets, 768px and up) */
-/* MD Medium devices (desktops, 992px and up) */
 @media (min-width: 768px) {
   #hero {
     background-size: 100% auto;
@@ -241,14 +237,11 @@ footer a, footer li {
     padding: 20px 40px 40px 40px;
   }
   #hero .logo-blanco {
-    width: 100px;
+    width: 95px;
+    padding-bottom: 4px;
   }
 }
-/* XS Mobile ( 0-768px ) */
-/*SM Small devices (tablets, 768px and up) */
 
-
-/* LG Large devices (large desktops, 1200px and up) */
 @media (min-width: 992px) {
   .textConduce .font-raleway{
     font-size: 2.7rem;
@@ -271,7 +264,7 @@ footer a, footer li {
   }
   .containerMobile .col-md-10{
     border: 1px solid white;
-    font-size: 1.7em;
+    font-size: 1.4em;
     padding: 30px 20px;
   }
   .containerMobile .col-md-10 .font-raleway{
